# pyeq3ng

./: .gitignore  README.md  pyproject.toml
pyeq3/: IModel.py
pyeq3/Services/: SolverService.py
pyeq3/UnitTests/: RunAllTests.py  Test_OdrEquivalence.py  _generate_odr_fixture.py  _odr_baseline_fixture.json
pyeq3/Utilities/: Multifit.py
