[tool.poetry]
name = "pyeq3"
version = "12.6.2a0+ng"
description = "An equation, curve and surface fitting library (pyeq3ng fork — scipy.odr replaced with odrpack)"
readme = "README.md"
readme-content-type = "text/x-rst"
authors = ["James Phillips, Robert Myhill <bob.myhill@bristol.ac.uk>"]
homepage = "https://github.com/kiloscheffer/pyeq3ng"
license = "BSD"
keywords = ["curve", "surface", "fitting"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.dependencies]
# Relaxed numpy constraint from upstream's ^1.24 to >=1.24: zunzunsite3
# (primary consumer) requires numpy 2.x for its strict-comparison
# semantics. odrpack is numpy-2 compatible.
python = ">=3.11"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"
# Replaces the scipy.odr dependency that this fork specifically removes.
odrpack = ">=0.5.0"
# Used by pyeq3.Utilities.Multifit. Upstream's pyproject.toml is missing
# this — it worked in their env because it was installed ad-hoc. Declared
# explicitly here so `uv sync` against the fork installs it.
pypandoc = ">=1.10"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
